--- a/Heroes.Tests/Heroes.Console.csproj
+++ b/Heroes.Tests/Heroes.Console.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Heroes.MpqTool\Heroes.MpqTool.csproj" />
+    <ProjectReference Include="..\Heroes.ReplayParser\Heroes.ReplayParser.csproj" />
   </ItemGroup>
 
   <ItemGroup>
