--- a/Tests/Heroes.ReplayParser.Tests/Heroes.ReplayParser.Tests.csproj
+++ b/Tests/Heroes.ReplayParser.Tests/Heroes.ReplayParser.Tests.csproj
@@ -10,17 +10,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Heroes.MpqTool\Heroes.MpqTool.csproj" />
+    <ProjectReference Include="..\..\Heroes.ReplayParser\Heroes.ReplayParser.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="HanamuraTemple1.StormReplay">
+    <None Update="Replays\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
