--- a/Heroes.Tests/Heroes.Console.csproj
+++ b/Heroes.Tests/Heroes.Console.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Heroes.MpqToolV2\Heroes.MpqToolV2.csproj" />
     <ProjectReference Include="..\Heroes.MpqTool\Heroes.MpqTool.csproj" />
     <ProjectReference Include="..\Heroes.ReplayParser\Heroes.ReplayParser.csproj" />
   </ItemGroup>
