--- a/Heroes.ReplayParser.Benchmarks/Heroes.ReplayParser.Benchmarks.csproj
+++ b/Heroes.ReplayParser.Benchmarks/Heroes.ReplayParser.Benchmarks.csproj
@@ -6,10 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Heroes.MpqToolV2\Heroes.MpqToolV2.csproj" />
     <ProjectReference Include="..\Heroes.ReplayParser\Heroes.ReplayParser.csproj" />
   </ItemGroup>
 
