--- a/Heroes.Compression/Heroes.Compression.csproj
+++ b/Heroes.Compression/Heroes.Compression.csproj
@@ -1,12 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Zlib\" />
-  </ItemGroup>
-
+  
 </Project>
