--- a/Heroes.MpqToolV2/Heroes.MpqToolV2.csproj
+++ b/Heroes.MpqToolV2/Heroes.MpqToolV2.csproj
@@ -15,14 +15,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetZip" Version="1.13.4" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.113">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Heroes.Compression\Heroes.Compression.csproj" />
   </ItemGroup>
 
 </Project>
